# geolius

./: .gitignore  DEVELOPMENT_NOTES.md  README.md  main.py  openapi.yaml  pyproject.toml
src/geolius/: __init__.py  config.py  dependencies.py  exceptions.py  geolocation_service.py  ip_validator.py  main.py  models.py  routes.py
tests/: test_geolocation_service.py  test_ip_validator.py  test_models.py  test_routes.py
